<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_menu_fresh"
            android:title="@string/navigation_menu_fresh"
            android:icon="@drawable/ic_explore_white_24dp"/>

        <item
            android:id="@+id/navigation_menu_boring"
            android:title="@string/navigation_menu_boring"
            android:icon="@drawable/ic_mood_white_24dp"/>

        <item
            android:id="@+id/navigation_menu_girl"
            android:title="@string/navigation_menu_girl"
            android:icon="@drawable/ic_local_florist_white_24dp"/>

        <item
            android:id="@+id/navigation_menu_stain"
            android:title="@string/navigation_menu_stain"
            android:icon="@drawable/ic_explore_white_24dp"/>

        <item
            android:id="@+id/navigation_menu_movie"
            android:title="@string/navigation_menu_movie"
            android:icon="@drawable/ic_movie_white_24dp"/>

        <item
            android:id="@+id/navigation_menu_setting"
            android:title="@string/navigation_menu_setting"
            android:icon="@drawable/ic_settings_white_24dp"/>
    </group>
</menu>